--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     <footer>
         <p>© 2024 Grad Affirmations</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="interScript.js"></script>
 </body>
 </html>
